# -*- coding: utf-8 -*-

2008-03-13  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/commands/uninstall_command.rb:  Add --user-install to
	  allow uninstallation from ~/.gem.  Bug #23760 by Roger Pack.
	* lib/rubygems/uninstaller.rb:  Automatically uninstall from
	  Gem.user_dir.

2008-03-12  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/specification.rb:  #description no longer removes
	  newlines.
	* lib/rubygems/indexer.rb:  Wrap description in a pre and force-wrap
	  lines to 78 characters for prettier display.
	* lib/rubygems/commands/setup_command.rb:  Clarify RubyGems RDoc
	  installation location.  Bug #22656 by Gian Marco Gherardi.

2008-03-09  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/commands/query_command.rb:  Add platforms to gem list
	  -d.
	* lib/rubygems/commands/setup_command.rb:  Allow setup to run from
	  read-only location.  Patch #21862 by Luis Herrera.
	* lib/rubygems/package/tar_input.rb:  Use real File methods.  Bug
	  #23966 by Mike Furr.
	* lib/rubygems.rb:  Don't add PATCHLEVEL if it's -1.  Patch #24048 by
	  Jeremy Kemper.
	* lib/rubygems/package/tar_input.rb:  Choose security policy
	  correctly.  Bug #24001 by Mike Furr.
	* lib/rubygems/remote_fetcher.rb:  Handle local paths with spaces.
	  Bug #24169 by Ryan Davis.
	* lib/rubygems/specification.rb:  Removed Gem::Specification::list,
	  causes leaks.  Bug #23668 by Steve Purcell.

2008-03-07  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/installer.rb:  Use Gem::bin_path in executable stubs to
	  work around Kernel#load bug.
	* lib/rubygems/commands/install_command.rb:  Copy user_install down to
	  Gem::DependencyInstaller.  Patch #23573 by Alf Mikula.
	* lib/rubygems/command.rb:  Add info on gem server directly to `gem
	  help`.  Patch #22271 by Hugh Sasse.

2008-03-06  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/specification.rb:  Don't allow FIXME in specs.
	* lib/rubygems/commands/spec_command.rb:  Add --ruby and --marshal
	  formats.